--- a/PDV/Properties/launchSettings.json
+++ b/PDV/Properties/launchSettings.json
@@ -21,7 +21,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7021;http://localhost:5053",
+      //"applicationUrl": "https://localhost:7021;http://localhost:5053",
+      "applicationUrl": "https://152.67.44.154:7021;http://152.67.44.154:5053",     //Para publicaçao
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
