--- a/PDV/Properties/launchSettings.json
+++ b/PDV/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5053",
+      //"applicationUrl": "http://localhost:5053",
+      "applicationUrl": "http://10.0.0.127:5053",        //Para publicação
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +23,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       //"applicationUrl": "https://localhost:7021;http://localhost:5053",
-      "applicationUrl": "https://10.0.0.127:7021;http://10.0.0.127:5053",     //Para publicaçao
+      "applicationUrl": "https://10.0.0.127:7021;http://10.0.0.127:5053",     //Para publicação
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
