--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,6 @@ jobs:
     # Deploy to the OCI VM
     - name: Deploy to the OCI VM Server
       run: |
-        #rsync -rv --dry-run  -P -e 'ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}' /home/runner/work//PDV/* opc@${{ secrets.SERVER }}:/home/opc/
+        rsync -rv --dry-run  -P -e 'ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}' /home/runner/work//PDV/* opc@${{ secrets.SERVER }}:/home/opc/
       
-        rsync -rv -P -e 'ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}' /home/runner/work/PDV/* ${{ secrets.USERNAME }}@${{ secrets.SERVER }}:/home/opc/
+        #rsync -rv -P -e 'ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}' /home/runner/work/PDV/* ${{ secrets.USERNAME }}@${{ secrets.SERVER }}:/home/opc/
