--- a/PDV/Properties/launchSettings.json
+++ b/PDV/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       //"applicationUrl": "http://localhost:5053",
-      "applicationUrl": "http://10.0.0.127:5053",        //Para publicação
+      "applicationUrl": "http://10.0.0.127:5053",        ////Para publicação
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
