Update main.yml 7

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,9 @@ jobs:
 
     # Testing the ssh conection
     - name: Test ssh
-      run: ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} ${{ secrets.USERNAME }}@${{ secrets.SERVER }} ls
+      run: |
+        ls -ltra ~/.ssh
+        ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} ${{ secrets.USERNAME }}@${{ secrets.SERVER }} ls
     
     # Publish the project
     - name: Publish
