--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,8 @@ jobs:
     - name: Test ssh
       run: |
         ls -ltra ~/.ssh
-        ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} ${{ secrets.USERNAME }}@${{ secrets.SERVER }} ls
+        ssh -i ~/.ssh/github-actions opc@144.22.141.149 ls -ltr
+        #ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} ${{ secrets.USERNAME }}@${{ secrets.SERVER }} ls
     
     # Publish the project
     - name: Publish
