Alterado o Navbar incluido Cadastro, com seleção de produto, Estoque, com apresentação de lista com data de inclusão

--- a/PDV/PDV.csproj
+++ b/PDV/PDV.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="Shared\Components\Info.razor" />
   </ItemGroup>
 
