--- a/PDV/Properties/launchSettings.json
+++ b/PDV/Properties/launchSettings.json
@@ -12,8 +12,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"applicationUrl": "http://localhost:5053",
-      "applicationUrl": "http://10.0.0.246:5053",        ////Para publicação
+      "applicationUrl": "http://localhost:5053",
+      //"applicationUrl": "http://10.0.0.246:5053",        ////Para publicação
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,8 +22,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"applicationUrl": "https://localhost:7021;http://localhost:5053",
-      "applicationUrl": "https://10.0.0.246:7021;http://10.0.0.246:5053",     //Para publicação
+      "applicationUrl": "https://localhost:7021;http://localhost:5053",
+      //"applicationUrl": "https://10.0.0.246:7021;http://10.0.0.246:5053",     //Para publicação
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
